part-2/exercise_2.02/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 3001
