part-2/exercise_2.02/manifests/todo-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 3001
