part-2/exercise_2.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8082
